make css better and fix css bcs dark mode not working goofy ahhh

--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -72,8 +72,10 @@
   }
   .btn:hover {
     background-color: #e7e7e8;
+    color: #111827;
   }
   .btn:focus {
+    color: #111827;
     box-shadow: none;
     outline: 2px solid transparent;
     outline-offset: 2px;
